--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.2",
+    "nodemon": "^3.0.2",
     "timeago.js": "^4.0.0-beta.3"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "name": "backend",
   "version": "1.0.0",
